@@ -30,4 +30,13 @@ public interface ILobbyGameController extends IRemote
     
     public Map<GUID, GameDescription> listGames();
     
+    /**
+     * Test if the server can connect to the game at this address.  This is used to see if the client address is network accessible
+     * (this will not be true if the client is behind a nat or firewall that is not properly configured)
+     * <p>
+     * 
+     * This method may only be called by the node that is hosting this game.<p>
+     */
+    public boolean testGame(GUID gameID);
+    
 }
